cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_11814_masters.cf.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: 'Master Nodepool for Banzai Cloud Pipeline Kubernetes Engine'
Parameters:
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  InstanceType:
    Description: EC2 instance type(s)
    Type: String
  ImageId:
    Type: 'AWS::EC2::Image::Id'
    Description: Amazon image
  ClusterName:
    Description: PKE Cluster name
    Type: String
  NodeGroupName:
    Description: Unique identifier for the PKE Node Group
    Type: String
    Default: "master"
  TargetGroup:
    Type: String
    Description: ID of the external network load balancer's target group the instances should register to
  VPCId:
    Type: 'AWS::EC2::VPC::Id'
    Description: Specify VPC Id for Autoscaling
  VPCDefaultSecurityGroupId:
    Type: 'AWS::EC2::SecurityGroup::Id'
    Description: Default security group of the VPC
  SubnetIds:
    Type: 'List<AWS::EC2::Subnet::Id>'
    Description: Specify Subnet Id for Autoscaling
  IamInstanceProfile:
    Type: String
  PkeCommand:
    Type: String
  PkeVersion:
    Type: String
  KeyName:
    Type: 'AWS::EC2::KeyPair::KeyName'
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Default: ""
  MinSize:
    Type: Number
    Default: 3
    Description: Minimum count of nodes in the pool
  MaxSize:
    Type: Number
    Default: 3
    Description: Maximum count of nodes in the pool
  DesiredCapacity:
    Type: Number
    Default: 3
    Description: Initial count of nodes in the pool
  VolumeSize:
    Type: Number
    Description: Size of EBS volume to create in GiB. Zero means to use the the AMI snapshot size.
    Default: 0

Conditions:
  VolumeSizeAuto: !Equals [ !Ref VolumeSize, 0 ]

#NodeSpotPrice:
#Type: String
#Description: The spot price for this ASG
#Conditions:
#IsSpotInstance: !Not [ !Equals [ !Ref NodeSpotPrice, "" ] ]

Resources:

  MasterSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Enable external SSH and NLB K8S api access and internal K8S api access'
      VpcId:
        Ref: VPCId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref SSHLocation
      - IpProtocol: -1
        SourceSecurityGroupId: !Ref "ClusterSecurityGroup"
      - IpProtocol: tcp
        FromPort: '6443'
        ToPort: '6443'
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: !Join ["", ["pke-", !Ref ClusterName, "-sg-master"]]

  LaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      KeyName: !Ref KeyName
      InstanceType: !Ref InstanceType
      #SpotPrice: !If [ IsSpotInstance, !Ref NodeSpotPrice, !Ref "AWS::NoValue" ]
      ImageId: !Ref ImageId
      IamInstanceProfile: !Ref IamInstanceProfile
      AssociatePublicIpAddress: true
      SecurityGroups:
      - !Ref MasterSecurityGroup
      - !Ref ClusterSecurityGroup
      - !Ref VPCDefaultSecurityGroupId
      BlockDeviceMappings:
      - DeviceName: /dev/sda1
        Ebs:
          VolumeSize: !If [ VolumeSizeAuto, !Ref 'AWS::NoValue', !Ref VolumeSize ]
      UserData:
        Fn::Base64:
          Fn::Sub:
          - |
            #!/usr/bin/env bash
            set -e

            hostnamectl set-hostname $(curl http://169.254.169.254/latest/meta-data/hostname)

            export PATH=$PATH:/usr/local/bin/
            if ! command -v pke > /dev/null 2>&1; then
                until curl -vL https://github.com/banzaicloud/pke/releases/download/${PkeVersion}/pke-${PkeVersion} -o /usr/local/bin/pke; do sleep 10; done
                chmod +x /usr/local/bin/pke
            fi

            ${PkeCommand}

          - AwsRegion: !Ref 'AWS::Region'
            PkeVersion: !Ref PkeVersion
            PkeCommand: !Ref PkeCommand

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchConfigurationName:
        Ref: LaunchConfiguration
      DesiredCapacity: !Ref DesiredCapacity
      MinSize: !Ref MinSize
      MaxSize: !Ref MaxSize
      VPCZoneIdentifier: !Ref SubnetIds
      TargetGroupARNs:
        - !Ref TargetGroup
      Tags:
      - Key: ClusterName
        Value: !Ref ClusterName
        PropagateAtLaunch: True
      - Key: Name
        Value: !Join ["", ["pke-", !Ref ClusterName, "-", !Ref NodeGroupName] ]
        PropagateAtLaunch: True
      - Key: !Join [ "", [ "kubernetes.io/cluster/", !Ref ClusterName] ]
        Value: "owned"
        PropagateAtLaunch: True
      - Key: 'k8s.io/cluster-autoscaler/disabled'
        Value: 'true'
        PropagateAtLaunch: 'false'

  ClusterSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Allow all traffic in cluster'
      VpcId:
        Ref: VPCId
      Tags:
      - Key: ClusterName
        Value: !Ref ClusterName
      - Key: Name
        Value: !Join ["", ["pke-",!Ref ClusterName, "-sg-cluster" ]]
      - Key: !Join [ "", [ "kubernetes.io/cluster/", !Ref ClusterName] ]
        Value: "owned"

Outputs:
  AutoScalingGroupId:
    Description: 'ID of the created ASG'
    Value: !Ref AutoScalingGroup
  ClusterSecurityGroup:
    Description: 'ID of the cluster security group created'
    Value: !Ref ClusterSecurityGroup
